classDiagram
    direction LR

    %% ---- Transport abstraction ----
    class ISerialDataReadWrite {
        <<interface>>
        +WriteLine(text) void
        +ReadExisting() string
        +DataReceived : event
    }
    class SerialPortEx {
        <<sealed>>
        +SerialPortEx()
    }
    class BleNusEx {
        <<sealed>>
        -string _deviceName
        -StringBuilder _rxBuffer
        +IsConnected : bool
        +ConnectAsync(timeout) Task
        +SendAsync(text) Task
        +DisposeAsync() ValueTask
        +DataReceived : event
        +ConnectionChanged : event
    }
    class NusDataReceivedEventArgs {
        <<sealed>>
        +Text : string
    }
    class BleConnectionException {
        <<sealed>>
    }

    %% ---- Protocol controller ----
    class JsonSerialController {
        +LedControl LedControl
        +ButtonControl ButtonControl
        +JsonSerialController(serialReadWriter)
    }
    class LedControl {
        -ISerialDataReadWrite _serialPort
        +List~LED~ Leds
        +this[id] LED
        +AllOn() void
        +AllOff() void
        +ToJson() string
    }
    class ButtonControl {
        -ISerialDataReadWrite _serialPort
        +List~Switch~ Switches
        +this[id] Switch
        +SwitchChanged : event
        +ProcessLine(json) void
    }
    class LED {
        +Id : string
        +Value : int
        +ValueChanged : event
    }
    class Switch {
        +Id : string
        +Value : int
        +SwitchStateChanged : event
    }
    class SwitchEventArgs {
        +Id : string
        +Value : int
    }

    %% ---- Relationships ----
    SerialPortEx ..|> ISerialDataReadWrite
    SerialPortEx --|> SerialPort
    BleNusEx ..|> ISerialDataReadWrite
    BleNusEx ..|> IAsyncDisposable
    BleNusEx ..> NusDataReceivedEventArgs : raises
    BleNusEx ..> BleConnectionException : throws

    JsonSerialController *--> LedControl
    JsonSerialController *--> ButtonControl
    JsonSerialController --> ISerialDataReadWrite : uses

    LedControl o--> "1..*" LED
    LedControl --> ISerialDataReadWrite : writes
    ButtonControl o--> "1..*" Switch
    ButtonControl --> ISerialDataReadWrite : reads
    Switch ..> SwitchEventArgs : raises
    ButtonControl ..> SwitchEventArgs : raises
